# carsheet_ocr

./: LICENSE  README.md
backend/: .gitignore  Makefile  README.md  model_output.pkl  process_image.py  pyproject.toml
backend/config/: detection_models.yaml  recognition_models.yaml  sheet_codes.csv
backend/explorations/: automatic_rotation_v1.py  automatic_rotation_v2.py  kernel_based_processing.py
backend/model_train/: check_gpu.py  clean_label_studio_json.py  compare_models.py  data_augmentation.py  dataset.py  eval_ocr_pipeline.py  plot_losses.py  settings.py  settings.yaml  test.py  train.py
backend/saved_models/test_finetune/: log_dataset.txt  opt.txt
backend/src/app/: __init__.py  main.py
backend/src/app/core/: config.py  image_upscaler.py
backend/src/app/core/detection/: _box_merger.py  _craft_detector.py  _utils.py
backend/src/app/core/recognition/: _ctc_label_converter.py  _train.py  _validation.py  _vgg_model.py  _vgg_recognizer.py
backend/src/app/core/recognition/train/: _train.py  _validation.py
backend/src/app/core/utils/: description_extractor.py  errors.py  file.py  image_processing.py
backend/src/app/models/detection/: __init__.py  _craft_detector.py  _detection_utils.py
backend/src/app/models/recognition/: __init__.py  _ctc_label_converter.py  _train_dataset.py  _validation.py  _vgg_recognizer.py
backend/src/app/services/: _utils.py  image_detection.py
backend/tests/e2e/: test_detection_service.py
frontend/: Makefile  README.md  package-lock.json  package.json
frontend/src/: App.css  App.tsx
frontend/src/components/: ImageCropper.tsx  ImageResult.css  ImageResult.tsx  ImageRotator.tsx
