[tool.poetry]
name = "carsheet-ocr-backend"
version = "0.1.0"
description = "OCR backend service for processing carsheet images"
authors = ["Cesar"]
packages = [
    { include = "app", from = "src" }
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
fastapi = "^0.115.12"
uvicorn = {extras = ["standard"], version = "^0.34.0"}
python-multipart = "^0.0.20"
pydantic-settings = "^2.8.1"
opencv-python = "^4.11.0.86"
torch = "^2.6.0"
torchvision = "^0.21.0"
loguru = "^0.7.3"
pandas = "^2.2.3"
torchmetrics = "^1.7.1"
scipy = "~1.15.2"
nltk = "^3.8.1"
matplotlib = "^3.10.1"
click = "^8.1.7"
albumentations = "^1.4.11"
tqdm = "^4.66.4"
black = "^25.1.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.11.4"
pytest = "^8.3.5"
ipykernel = "^6.29.5"

[tool.ruff]
line-length = 100
target-version = "py39"

# Enable Pyflakes (`F`), pycodestyle (`E`), isort (`I`), and pydocstyle (`D`)
select = ["E", "F", "I", "D", "N", "UP", "B", "A", "C4", "RUF", "W"]
ignore = ["D100", "D104", "D107"]  # Ignore missing docstrings in certain cases

# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

